# sofie_ros

./: CMakeLists.txt  package.xml
launch/: play_back.launch  simple_bridge_normal.launch
nodes/: ar_pose_csv_writer.py
rviz_config/: rviz-config.rviz
src/arduino_code/: README.md  anglefrequency.m  angleresample.m
src/arduino_code/anglevalue/: anglevalue.ino
